добавил класс Function для печати arrayList. В telephone реализовал метод позвонить и ответить